import uuid
from datetime import datetime

from sqlalchemy import CheckConstraint, DateTime, ForeignKey, Index, String, Uuid, func
from sqlalchemy.orm import Mapped, mapped_column

from app.db.session import Base


class FriendRequest(Base):
    """친구 요청 (FRIEND-01). declined+responded_at → 30일 추천 제외(MATCH-03)."""

    __tablename__ = "friend_requests"
    __table_args__ = (Index("ix_friend_requests_receiver_status", "receiver_id", "status"),)

    id: Mapped[uuid.UUID] = mapped_column(Uuid, primary_key=True, default=uuid.uuid4)
    sender_id: Mapped[uuid.UUID] = mapped_column(
        ForeignKey("users.id", ondelete="CASCADE"), nullable=False, index=True
    )
    receiver_id: Mapped[uuid.UUID] = mapped_column(
        ForeignKey("users.id", ondelete="CASCADE"), nullable=False
    )
    status: Mapped[str] = mapped_column(String(20), nullable=False, server_default="pending")
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), server_default=func.now(), nullable=False
    )
    responded_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True), nullable=True)


Index(
    "uq_friend_requests_pending_pair",
    func.least(FriendRequest.sender_id, FriendRequest.receiver_id),
    func.greatest(FriendRequest.sender_id, FriendRequest.receiver_id),
    unique=True,
    postgresql_where=FriendRequest.status == "pending",
)


class Friendship(Base):
    """양방향 친구 관계 (FRIEND-02). 정규화 쌍: user_a < user_b."""

    __tablename__ = "friendships"
    __table_args__ = (CheckConstraint("user_a < user_b", name="ck_friendships_ordered"),)

    user_a: Mapped[uuid.UUID] = mapped_column(
        ForeignKey("users.id", ondelete="CASCADE"), primary_key=True
    )
    user_b: Mapped[uuid.UUID] = mapped_column(
        ForeignKey("users.id", ondelete="CASCADE"), primary_key=True
    )
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), server_default=func.now(), nullable=False
    )


class Block(Base):
    """차단 (BLOCK-01). 게시물·프로필·요청·채팅·추천 접점을 상호 제거."""

    __tablename__ = "blocks"

    blocker_id: Mapped[uuid.UUID] = mapped_column(
        ForeignKey("users.id", ondelete="CASCADE"), primary_key=True
    )
    blocked_id: Mapped[uuid.UUID] = mapped_column(
        ForeignKey("users.id", ondelete="CASCADE"), primary_key=True
    )
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), server_default=func.now(), nullable=False
    )
